# touchdesigner-custom-operators

./: .gitignore  BUILD.bazel  CMakeLists.txt  CMakePresets.json  MODULE.bazel  README.md
chop/: BUILD.bazel  CMakeLists.txt
core/: BUILD.bazel  CMakeLists.txt
dat/: BUILD.bazel  CMakeLists.txt
sop/: BUILD.bazel  CMakeLists.txt
top/: BUILD.bazel  CMakeLists.txt
