module(
    name = "touchdesigner",
    version = "0.1.0",
)

bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "gazelle_cc", version = "0.3.0")
git_override(
    module_name = "gazelle_cc",
    remote = "https://github.com/EngFlow/gazelle_cc.git",
    commit = "5e33f33b2a7d7d0c0aef6bbb7773e01cda3203e9",
)
bazel_dep(name = "rules_cc", version = "0.2.14")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
